Arreglos de href y alt, y estilos de Reseñas. Se agrega meta description

--- a/front/pages/dcProducts.html
+++ b/front/pages/dcProducts.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -18,7 +19,7 @@
       <!-- Header -->
       <header>
         <a class="navbar-logo" href="/index.html">
-            <img class="logo" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
+            <img class="logo" src="/front/images/logo_planet.png" alt="Planet_SuperHeroes">
         </a>  
         <nav class="navbar">
             <!-- Menu Hamburguesa -->
@@ -60,7 +61,7 @@
 
       <section id="card_section-root">
         <div>
-          <img src="/front/images/dc-batman.jpg" alt="Imagen de un comic de batman" />
+          <img src="/front/images/dc-batman.jpg" alt="Comic_batman" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
@@ -68,7 +69,7 @@
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-batmanReborn.jpg" alt="Imagen de un comic de batman" />
+          <img src="/front/images/dc-batmanReborn.jpg" alt="Comic_Batman" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
@@ -76,7 +77,7 @@
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-batgirl.jpg" alt="Imagen de un comic de batichica" />
+          <img src="/front/images/dc-batgirl.jpg" alt="Comic_Batichica" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batichica</h4>
@@ -84,7 +85,7 @@
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-justiceLeague.jpg" alt="Imagen de un comic de la liga de la justicia" />
+          <img src="/front/images/dc-justiceLeague.jpg" alt="Comic_Justice_League" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Liga de la Justicia</h4>
@@ -92,7 +93,7 @@
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-batmanyFlashjpg.jpg" alt="Imagen de un comic de batman con flash" />
+          <img src="/front/images/dc-batmanyFlashjpg.jpg" alt="Comic_Flash" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
@@ -100,7 +101,7 @@
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-wonderWomen.jpg" alt="Imagen de un comic de la mujer maravilla" />
+          <img src="/front/images/dc-wonderWomen.jpg" alt="Comic_wonder_woman" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Mujer Maravilla</h4>
@@ -108,7 +109,7 @@
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-flash.jpg" alt="Imagen de un comic de flash" />
+          <img src="/front/images/dc-flash.jpg" alt="Comic_Flash2" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Flash</h4>
@@ -116,7 +117,7 @@
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-superGirlpg.jpg" alt="Imagen de un comic de superchica" />
+          <img src="/front/images/dc-superGirlpg.jpg" alt="Comic_superchica" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Supergirl</h4>
@@ -124,7 +125,7 @@
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-supermanLast.jpg" alt="Imagen de un comic de superman"  />
+          <img src="/front/images/dc-supermanLast.jpg" alt="Comic_Superman"  />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
@@ -140,36 +141,36 @@
             <div class="footer-links">
                 <h4>Preguntas frecuentes</h4>
                 <ul>
-                    <li><a class="link-sec" href="#">Como comprar</a></li>
-                    <li><a href="#">Política de envíos</a></li>
-                    <li><a href="#">Novedades</a></li>
-                    <li><a href="#">Precios mayoristas</a></li>
+                    <li><a class="link-sec" href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Como comprar</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Política de envíos</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Novedades</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Precios mayoristas</a></li>
                 </ul>
             </div>
             <div class="footer-links">
                 <h4>MEDIOS DE PAGO</h4>
                 <ul>
-                    <li><a href="#">Tarjetas de Crédito</a></li>
-                    <li><a href="#">Tarjetas de Débito</a></li>
-                    <li><a href="#">Transferencias</a></li>
-                    <li><a href="#">Efectivo</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Tarjetas de Crédito</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Tarjetas de Débito</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Transferencias</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Efectivo</a></li>
                 </ul>
             </div>
             <div class="footer-links">
                 <h4>PLANET SUPERHEROES CENTRO</h4>
                 <ul>
-                    <li><a href="#">Galería Muñoz-9 de julio 160</a></li>
-                    <li><a href="#">(351) 43727282</a></li>
-                    <li><a href="#">info@planetsuper.com.ar</a></li>
-                    <li><a href="#">Lunes a Sábado:10:00 a 18:00</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Galería Muñoz-9 de julio 160</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">(351) 43727282</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">info@planetsuper.com.ar</a></li>
+                    <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Lunes a Sábado:10:00 a 18:00</a></li>
                 </ul>
             </div>
             <div class="footer-links">
                 <h4> SÍGUENOS EN NUESTRAS REDES</h4> 
                 <div class="social-link">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa- fa-whatsapp"></i></a>
+                    <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa-instagram"></i></a>
+                    <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa- fa-whatsapp"></i></a>
                 </div>
             </div>
         </div>
