--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Planet Superheroes</title>
     <link
       rel="icon"
-      href="/front/images/logo-favicon.ico"
+      href="front/images/logo-favicon.ico"
       type="image/x-icon"
     />
     <link rel="stylesheet" href="front/css/style.css" />
-    <link rel="stylesheet" href="/front/css/Reseña.css" />
+    <link rel="stylesheet" href="front/css/Reseña.css" />
 
     <script
       src="https://kit.fontawesome.com/6ff66d206f.js"
@@ -26,8 +27,8 @@
       <a class="navbar-logo" href="/index.html">
         <img
           class="logo"
-          src="/front/images/logo_planet.png"
-          alt="Planet SuperHeroes"
+          src="front/images/logo_planet.png"
+          alt="Planet_SuperHeroes"
         />
       </a>
       <nav class="navbar">
@@ -40,19 +41,19 @@
         <!-- Fin Menu Hamburguesa  -->
         <ul class="nav__links">
           <li>
-            <a href="/front/pages/about.html">¿QUIENES SOMOS?</a>
+            <a href="front/pages/about.html">¿QUIENES SOMOS?</a>
           </li>
           <li>
-            <a href="/front/pages/marvelProducts.html">PRODUCTOS</a>
+            <a href="front/pages/marvelProducts.html">PRODUCTOS</a>
           </li>
           <li>
             <a href="#form">CONTACTO</a>
           </li>
           <li>
-            <a href="/front/pages/login.html">INGRESAR</a>
+            <a href="front/pages/login.html">INGRESAR</a>
           </li>
           <li>
-            <a href="/front/pages/registro.html">REGISTRO</a>
+            <a href="front/pages/registro.html">REGISTRO</a>
           </li>
         </ul>
       </nav>
@@ -63,18 +64,18 @@
       <div class="container-carousel">
         <div class="carruseles" id="slider">
           <section class="slider-section">
-            <img src="/front/images/SuscribeteCarousel.jpeg" />
+            <img src="front/images/SuscribeteCarousel.jpeg" />
           </section>
 
           <section class="slider-section">
-            <img src="/front/images/SpiderCarousel.jpeg" />
+            <img src="front/images/SpiderCarousel.jpeg" />
           </section>
 
           <section class="slider-section">
-            <img src="/front/images/EnviosCarousel.jpeg" />
+            <img src="front/images/EnviosCarousel.jpeg" />
           </section>
           <section class="slider-section">
-            <img src="/front/images/CapitanCarousel.jpeg" />
+            <img src="front/images/CapitanCarousel.jpeg" />
           </section>
         </div>
         <div class="btn-left"><i class="bx bx-chevron-left"></i></div>
@@ -86,20 +87,20 @@
       <div class="container">
         <div class="button">
           <img
-            src="/front/images/free.png"
-            alt="Envío gratis Córdoba capital"
+            src="front/images/free.png"
+            alt="Envío_gratis_Córdoba_capital"
           />
           <p class="button-text">Envío gratis Córdoba capital</p>
         </div>
         <div class="button">
           <img
-            src="/front/images/tarjetas.png"
-            alt="Todos los medios de pago"
+            src="front/images/tarjetas.png"
+            alt="Todos_los_medios_de_pago"
           />
           <p class="button-text">Todos los medios de pago</p>
         </div>
         <div class="button">
-          <img src="/front/images/30dto.png" alt="Descuentos Exclusivos" />
+          <img src="front/images/30dto.png" alt="Descuentos_Exclusivos" />
           <p class="button-text">Descuentos Exclusivos</p>
         </div>
       </div>
@@ -114,56 +115,56 @@
       <div class="reseña_container">
         <div class="reseña_card">
           <div class="top">
-            <img src="/front/images/prueba estrella.jpg" alt="estrellas" />
+            <img src="front/images/estrella.jpg" alt="estrellas" />
             <p>
               Excelente atención, necesitaba hacer un regalo y me llegaron los
-              cómics el mismo día.
+              cómics el mismo día. Muy recomendado.
             </p>
           </div>
           <div class="bottom">
-            <img src="/front/images/juan.jpg" alt="User" />
+            <img src="front/images/juan.jpg" alt="User" />
             <h2>JUAN</h2>
           </div>
         </div>
 
         <div class="reseña_card">
           <div class="top">
-            <img src="/front/images/prueba estrella.jpg" alt="estrellas" />
+            <img src="front/images/estrella.jpg" alt="estrellas" />
             <p>
               La selección de cómics es impresionante, ¡nunca dejo de
               sorprenderme con lo que encuentro!
             </p>
           </div>
           <div class="bottom">
-            <img src="/front/images/Maria.jpg" alt="User" />
+            <img src="front/images/Maria.jpg" alt="User" />
             <h2>MARIA</h2>
           </div>
         </div>
 
         <div class="reseña_card">
           <div class="top">
-            <img src="/front/images/prueba estrella.jpg" alt="estrellas" />
+            <img src="front/images/estrella.jpg" alt="estrellas" />
             <p>
               Esta tienda hace que mi niño interior se emocione cada vez que
-              entro, ¡es un lugar mágico!
+              entro, ¡es un lugar único y mágico!
             </p>
           </div>
           <div class="bottom">
-            <img src="/front/images/Pilar.jpg" alt="User" />
+            <img src="front/images/Pilar.jpg" alt="User" />
             <h2>PILAR</h2>
           </div>
         </div>
 
         <div class="reseña_card">
           <div class="top">
-            <img src="/front/images/prueba estrella.jpg" alt="estrellas" />
+            <img src="front/images/estrella.jpg" alt="estrellas" />
             <p>
               Los empleados son súper amables y conocedores, hacen que cada
               visita sea una experiencia genial.
             </p>
           </div>
           <div class="bottom">
-            <img src="/front/images/Lautaro.jpg" alt="User" />
+            <img src="front/images/Lautaro.jpg" alt="User" />
             <h2>LAUTARO</h2>
           </div>
         </div>
@@ -199,13 +200,13 @@
               <span class="second_text"> Redes Sociales: </span>
               <ul class="social_list">
                 <li>
-                  <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+                  <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fa-brands fa-square-facebook"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+                  <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fa-brands fa-square-twitter"></i></a>
                 </li>
                 <li>
-                  <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+                  <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fa-brands fa-square-instagram"></i></a>
                 </li>
               </ul>
             </div>
@@ -265,48 +266,48 @@
           <div class="footer-links">
             <h4>Preguntas frecuentes</h4>
             <ul>
-              <li><a class="link-sec" href="#">Como comprar</a></li>
-              <li><a href="#">Política de envíos</a></li>
-              <li><a href="#">Novedades</a></li>
-              <li><a href="#">Precios mayoristas</a></li>
+              <li><a class="link-sec" href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Como comprar</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Política de envíos</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Novedades</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Precios mayoristas</a></li>
             </ul>
           </div>
           <div class="footer-links">
             <h4>MEDIOS DE PAGO</h4>
             <ul>
-              <li><a href="#">Tarjetas de Crédito</a></li>
-              <li><a href="#">Tarjetas de Débito</a></li>
-              <li><a href="#">Transferencias</a></li>
-              <li><a href="#">Efectivo</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Tarjetas de Crédito</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Tarjetas de Débito</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Transferencias</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Efectivo</a></li>
             </ul>
           </div>
           <div class="footer-links">
             <h4>PLANET SUPERHEROES CENTRO</h4>
             <ul>
-              <li><a href="#">Galería Muñoz-9 de julio 160</a></li>
-              <li><a href="#">(351) 43727282</a></li>
-              <li><a href="#">info@planetsuper.com.ar</a></li>
-              <li><a href="#">Lunes a Sábado:10:00 a 18:00</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Galería Muñoz-9 de julio 160</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">(351) 43727282</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">info@planetsuper.com.ar</a></li>
+              <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Lunes a Sábado:10:00 a 18:00</a></li>
             </ul>
           </div>
           <div class="footer-links">
             <h4>SÍGUENOS EN NUESTRAS REDES</h4>
             <div class="social-link">
-              <a href="#"><i class="fab fa-facebook-f"></i></a>
-              <a href="#"><i class="fab fa-instagram"></i></a>
-              <a href="#"><i class="fab fa- fa-whatsapp"></i></a>
+              <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa-facebook-f"></i></a>
+              <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa-instagram"></i></a>
+              <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa- fa-whatsapp"></i></a>
             </div>
           </div>
         </div>
       </div>
     </footer>
     <div class="copyright">&copy; Desarrolladores 2.0</div>
-    <script src="/front/js/script.js"></script>
+    <script src="front/js/script.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
       crossorigin="anonymous"
     ></script>
-    <script src="/front/js/carrusel.js"></script>
+    <script src="front/js/carrusel.js"></script>
   </body>
 </html>
