--- a/front/pages/about.html
+++ b/front/pages/about.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/front/css/styles_about.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -115,35 +116,35 @@
                     <h4>Preguntas frecuentes</h4>
                     <ul>
                         <li><a class="link-sec" href="#">Como comprar</a></li>
-                        <li><a href="#">Política de envíos</a></li>
-                        <li><a href="#">Novedades</a></li>
-                        <li><a href="#">Precios mayoristas</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Política de envíos</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Novedades</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Precios mayoristas</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>MEDIOS DE PAGO</h4>
                     <ul>
-                        <li><a href="#">Tarjetas de Crédito</a></li>
-                        <li><a href="#">Tarjetas de Débito</a></li>
-                        <li><a href="#">Transferencias</a></li>
-                        <li><a href="#">Efectivo</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Tarjetas de Crédito</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Tarjetas de Débito</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Transferencias</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Efectivo</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>PLANET SUPERHEROES CENTRO</h4>
                     <ul>
-                        <li><a href="#">Galería Muñoz-9 de julio 160</a></li>
-                        <li><a href="#">(351) 43727282</a></li>
-                        <li><a href="#">info@planetsuper.com.ar</a></li>
-                        <li><a href="#">Lunes a Sábado:10:00 a 18:00</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Galería Muñoz-9 de julio 160</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">(351) 43727282</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">info@planetsuper.com.ar</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Lunes a Sábado:10:00 a 18:00</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4> SÍGUENOS EN NUESTRAS REDES</h4> 
                     <div class="social-link">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa- fa-whatsapp"></i></a>
+                        <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa- fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
