--- a/front/pages/detail_product_pages/Detalle_Comic_DD.html
+++ b/front/pages/detail_product_pages/Detalle_Comic_DD.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Planet Superheroes - Detalle Comic</title>
     <link rel="stylesheet" href="/front/css/detail.css">
     <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
