--- a/front/pages/detail_product_pages/Detalle_Comic_Batgirl_Rebirth.html
+++ b/front/pages/detail_product_pages/Detalle_Comic_Batgirl_Rebirth.html
@@ -150,27 +150,27 @@
                 <div class="footer-links">
                     <h4>MEDIOS DE PAGO</h4>
                     <ul>
-                        <li><a href="#">Tarjetas de Crédito</a></li>
-                        <li><a href="#">Tarjetas de Débito</a></li>
-                        <li><a href="#">Transferencias</a></li>
-                        <li><a href="#">Efectivo</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Tarjetas de Crédito</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Tarjetas de Débito</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Transferencias</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Efectivo</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4>PLANET SUPERHEROES CENTRO</h4>
                     <ul>
-                        <li><a href="#">Galeria Muñoz-9 de julio 160</a></li>
-                        <li><a href="#">(351) 43727282</a></li>
-                        <li><a href="#">info@planetsuper.com.ar</a></li>
-                        <li><a href="#">Lunes a Sabado:10:00 a 18:00</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Galeria Muñoz-9 de julio 160</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">(351) 43727282</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">info@planetsuper.com.ar</a></li>
+                        <li><a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023">Lunes a Sabado:10:00 a 18:00</a></li>
                     </ul>
                 </div>
                 <div class="footer-links">
                     <h4> SIGUENOS EN NUESTRAS REDES</h4> 
                     <div class="social-link">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa- fa-whatsapp"></i></a>
+                        <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa-facebook-f"></i></a>
+                        <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa-instagram"></i></a>
+                        <a href="https://github.com/ISPC-Desarrolladores-2-0/PFS-Ecommerce-2023"><i class="fab fa- fa-whatsapp"></i></a>
                     </div>
                 </div>
             </div>
