Actualizacion de enlaces

--- a/front/pages/about.html
+++ b/front/pages/about.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
-    <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/front/css/styles_about.css">
+    <link rel="icon" href="front/images/logo-favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="front/css/styles_about.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <title>About</title>
     <script src="https://kit.fontawesome.com/b10a384426.js" crossorigin="anonymous"></script>
@@ -18,7 +18,7 @@
         <header>
             <nav class="navbar">
                 <a class="navbar-logo" href="/index.html">
-                    <img class="logo" src="/front/images/logo_planet.png" alt="Planet_SuperHeroes">
+                    <img class="logo" src="front/images/logo_planet.png" alt="Planet_SuperHeroes">
                 </a>
                 <!-- Menu Hamburguesa -->
                 <input type="checkbox" id="check">
@@ -51,7 +51,7 @@
                 <div class="container">
                     <div class="row">           
                         <div>       
-                            <figure><img src="/front/images/Logo-comic_store.png" alt="logoDeLaEccomerce" id="aboutLogo"></figure>  
+                            <figure><img src="front/images/Logo-comic_store.png" alt="logoDeLaEccomerce" id="aboutLogo"></figure>  
                             <h5 class="io5">Bienvenidos a Planet Superheroes, tu destino definitivo para el mundo de los
                                 cómics en Córdoba Capital. </h5>
                         </div>
@@ -72,7 +72,7 @@
                         </div>
                         <div class="col-md-6">
                             <figure>
-                                <img src="/front/images/localImage3.jpeg" alt="Imagen_Fisico_del_Local" class="img-fluid" style="border-radius: 30px;">
+                                <img src="front/images/localImage3.jpeg" alt="Imagen_Fisico_del_Local" class="img-fluid" style="border-radius: 30px;">
                             </figure>
 
                         </div>
@@ -93,7 +93,7 @@
                         </div>
                         <div class="col-md-6">
                             <figure>
-                                <img src="/front/images/localImage1.jpeg" alt="Imagen_Fisico_del_Local" class="img-fluid" style="border-radius: 30px;">
+                                <img src="front/images/localImage1.jpeg" alt="Imagen_Fisico_del_Local" class="img-fluid" style="border-radius: 30px;">
                             </figure>
 
                         </div>
