--- a/front/pages/registro.html
+++ b/front/pages/registro.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Registro</title>
-    <link rel="stylesheet" href="/front/css/registro.css" />
+    <link rel="stylesheet" href="front/css/registro.css" />
     <link
       rel="icon"
-      href="/front/images/logo-favicon.ico"
+      href="front/images/logo-favicon.ico"
       type="image/x-icon"
     />
     <link
       rel="shortcut icon"
-      href="./front/images/logo_planet - favicon.ico"
+      href="front/images/logo_planet - favicon.ico"
       type="image/x-icon"
     />
   </head>
@@ -23,7 +23,7 @@
         <div class="title">
           <img
             class="logo-register"
-            src="/front/images/logo_planet.png"
+            src="front/images/logo_planet.png"
             alt="logo"
           />
           <h1>PLANET SUPER HEROES</h1>
@@ -111,6 +111,6 @@
         <a class="go_back" href="/index.html">Volver al Inicio</a>
       </form>
     </section>
-    <script src="/front/js/validacionRegistro.js"></script>
+    <script src="front/js/validacionRegistro.js"></script>
   </body>
 </html>
