--- a/front/pages/dcProducts.html
+++ b/front/pages/dcProducts.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
-    <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
+    <link rel="icon" href="front/images/logo-favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"/>
-    <link rel="stylesheet" href="/front/css/dcProducts.css" />
+    <link rel="stylesheet" href="front/css/dcProducts.css" />
     <title>Marvel Comics</title>
     <script src="https://kit.fontawesome.com/b10a384426.js" crossorigin="anonymous"></script>
   </head>
@@ -19,7 +19,7 @@
       <!-- Header -->
       <header>
         <a class="navbar-logo" href="/index.html">
-            <img class="logo" src="/front/images/logo_planet.png" alt="Planet_SuperHeroes">
+            <img class="logo" src="front/images/logo_planet.png" alt="Planet_SuperHeroes">
         </a>  
         <nav class="navbar">
             <!-- Menu Hamburguesa -->
@@ -61,75 +61,75 @@
 
       <section id="card_section-root">
         <div>
-          <img src="/front/images/dc-batman.jpg" alt="Comic_batman" />
+          <img src="front/images/dc-batman.jpg" alt="Comic_batman" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
-            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Batman_Joker.html"> Ver Detalles</a> </button>
+            <button class="button"><a href="front/pages/detail_product_pages/Detalle_Comic_Batman_Joker.html"> Ver Detalles</a> </button>
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-batmanReborn.jpg" alt="Comic_Batman" />
+          <img src="front/images/dc-batmanReborn.jpg" alt="Comic_Batman" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
-            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Batman.html"> Ver Detalles</a> </button>
+            <button class="button"><a href="front/pages/detail_product_pages/Detalle_Comic_Batman.html"> Ver Detalles</a> </button>
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-batgirl.jpg" alt="Comic_Batichica" />
+          <img src="front/images/dc-batgirl.jpg" alt="Comic_Batichica" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batichica</h4>
-            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Batgirl_Rebirth.html"> Ver Detalles</a></button>
+            <button class="button"><a href="front/pages/detail_product_pages/Detalle_Comic_Batgirl_Rebirth.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-justiceLeague.jpg" alt="Comic_Justice_League" />
+          <img src="front/images/dc-justiceLeague.jpg" alt="Comic_Justice_League" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Liga de la Justicia</h4>
-            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Justice_League.html"> Ver Detalles</a></button>
+            <button class="button"><a href="front/pages/detail_product_pages/Detalle_Comic_Justice_League.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-batmanyFlashjpg.jpg" alt="Comic_Flash" />
+          <img src="front/images/dc-batmanyFlashjpg.jpg" alt="Comic_Flash" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
-            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Batman_y_Flash.html"> Ver Detalles</a></button>
+            <button class="button"><a href="front/pages/detail_product_pages/Detalle_Comic_Batman_y_Flash.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-wonderWomen.jpg" alt="Comic_wonder_woman" />
+          <img src="front/images/dc-wonderWomen.jpg" alt="Comic_wonder_woman" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Mujer Maravilla</h4>
-            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Superman_y_Wonderwoman.html"> Ver Detalles</a></button>
+            <button class="button"><a href="front/pages/detail_product_pages/Detalle_Comic_Superman_y_Wonderwoman.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-flash.jpg" alt="Comic_Flash2" />
+          <img src="front/images/dc-flash.jpg" alt="Comic_Flash2" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Flash</h4>
-            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Flashpoint.html"> Ver Detalles</a></button>
+            <button class="button"><a href="front/pages/detail_product_pages/Detalle_Comic_Flashpoint.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-superGirlpg.jpg" alt="Comic_superchica" />
+          <img src="front/images/dc-superGirlpg.jpg" alt="Comic_superchica" />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Supergirl</h4>
-            <button class="button"><a href="/front/pages/detail_product_pages/Detalle_Comic_Supergirl_Brainiac.html"> Ver Detalles</a></button>
+            <button class="button"><a href="front/pages/detail_product_pages/Detalle_Comic_Supergirl_Brainiac.html"> Ver Detalles</a></button>
           </div>
         </div>
         <div>
-          <img src="/front/images/dc-supermanLast.jpg" alt="Comic_Superman"  />
+          <img src="front/images/dc-supermanLast.jpg" alt="Comic_Superman"  />
           <div class="card-content">
             <h3>$$200.000</h3>
             <h4>Batman</h4>
-            <button class="button"><a href="/front/pages/detail_product_pages//Detalle_Comic_Superman_The_Last.html"> Ver Detalles</a></button>
+            <button class="button"><a href="front/pages/detail_product_pages//Detalle_Comic_Superman_The_Last.html"> Ver Detalles</a></button>
           </div>
         </div>
       </section>
