--- a/front/pages/detail_product_pages/Detalle_Comic_Batgirl_Rebirth.html
+++ b/front/pages/detail_product_pages/Detalle_Comic_Batgirl_Rebirth.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
     <title>Planet Superheroes - Detalle Comic</title>
-    <link rel="stylesheet" href="front/css/detail.css">
-    <link rel="icon" href="front/images/logo-favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/front/css/detail.css">
+    <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">      
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Bangers&family=Hachi+Maru+Pop&family=Patrick+Hand&display=swap');
@@ -22,26 +22,26 @@
                 <i class="fas fa-times" id="cancel"></i>
             </label>
             <a class="navbar-logo" href="#">
-                <img class="logo-new" src="front/images/logo_planet.png" alt="Planet SuperHeroes">
+                <img class="logo-new" src="/front/images/logo_planet.png" alt="Planet SuperHeroes">
             </a>            
             <ul class="nav-op">
                 <li class="new-li">
                     <a class="nav-link" href="/index.html">INICIO</a>
                 </li>                        
                 <li class="new-li">
-                    <a class="nav-link" href="front/pages/about.html">¿QUIENES SOMOS?</a>
+                    <a class="nav-link" href="/front/pages/about.html">¿QUIENES SOMOS?</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="front/pages/dcProducts.html">PRODUCTOS</a>
+                    <a class="nav-link" href="/front/pages/dcProducts.html">PRODUCTOS</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="index.html#form">CONTACTO</a>
+                    <a class="nav-link" href="/index.html#form">CONTACTO</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="front/pages/login.html">INGRESAR</a>
+                    <a class="nav-link" href="/front/pages/login.html">INGRESAR</a>
                 </li>
                 <li class="new-li">
-                    <a class="nav-link" href="front/pages/registro.html">REGISTRO</a>
+                    <a class="nav-link" href="/front/pages/registro.html">REGISTRO</a>
                 </li>
             </ul>  
         </nav>
@@ -180,7 +180,7 @@
         &copy; Desarrolladores 2.0
     </div>     
       
-    <script src="front/js/script.js"></script>
+    <script src="/front/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous">
     </script>
