--- a/front/pages/marvelProducts.html
+++ b/front/pages/marvelProducts.html
@@ -5,11 +5,11 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Descubre una extensa colección de cómics que abarca desde clásicos atemporales hasta las últimas publicaciones. Nuestra tienda en línea ofrece una cuidadosa selección de historietas, proporcionando a los aficionados acceso a obras de alta calidad y contenido de renombre. Explora mundos narrativos ricos en profundidad y significado en nuestra plataforma de cómics en línea." />
-        <link rel="icon" href="front/images/logo-favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/front/images/logo-favicon.ico" type="image/x-icon">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="front/css/productos.css">
+        <link rel="stylesheet" href="/front/css/productos.css">
         <title>Marvel Comics</title>
         <script src="https://kit.fontawesome.com/b10a384426.js" crossorigin="anonymous"></script>
     </head>
@@ -17,7 +17,7 @@
         <!-- Header -->
         <header>
             <a class="navbar-logo" href="/index.html">
-                <img class="logo" src="front/images/logo_planet.png" alt="Planet_SuperHeroes">
+                <img class="logo" src="/front/images/logo_planet.png" alt="Planet_SuperHeroes">
             </a>  
             <nav class="navbar">
                 <!-- Menu Hamburguesa -->
@@ -104,6 +104,6 @@
     <div class="copyright">
         &copy; Desarrolladores 2.0
     </div>
-    <script src="front/js/productos.js"></script>
+    <script src="/front/js/productos.js"></script>
 </body>
 </html>
